[tool.poetry]
name = "dawn-h"
version = "0.1.0"
description = ""
authors = ["dawn.h <dawn.h@kakaocorp.com>"]
readme = "README.md"
packages = [{include = "dawn"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "0.28"
chromadb = "^0.4.18"
langchain = "^0.0.347"

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
